Added challenge description and sample data